# ppmm

./: .gitignore  LICENSE  MANIFEST.in  README-zh.md  README.md  data.json  pyproject.toml  setup.py
ppmm/: cli.py  config.py  data.json  mirror.py
