[tool.poetry]
name = "ppmm"
version = "1.1.8"
description = "A simple pip mirror management tool"
authors = ["XuLan <xuzn@msn.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ppmm" }
]

[tool.poetry.dependencies]
python = ">=3.6"
click = "^8.0"

[tool.poetry.scripts]
mm = "ppmm.cli:cli"
ppmm = "ppmm.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://github.com/yage-zhu/ppmm"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"